# cpp_quantity

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: cmake.yml
include/: dimension.hpp
test/: CMakeLists.txt  dimension.cpp  it_works.cpp
